Fix timeline marker alignment bug

--- a/src/components/sections/BuildTimeline.module.css
+++ b/src/components/sections/BuildTimeline.module.css
@@ -60,7 +60,7 @@
 }
 
 .left .marker {
-  right: calc(var(--space-xl) * -1);
+  right: 0;
   transform: translateX(50%);
 }
 
